# logo_check

./: .env.docker  .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  detailed_implementation_plan_v1.5.md  docker-compose.yml  implementation_plan.md  pyproject.toml  railway.json  requirements-prod.txt  requirements.txt  revised_implementation_plan_V2..md
.agent/workflows/: vast_deployment.md
docs/: api_guide.md  eda_report.md  eda_report_v2.md  serving_plan.md  training_log.md
legacy/: kaggle_download.py
logo_similarity/api/: app.py  onnx_inference.py
logo_similarity/config/: paths.py  settings.py
logo_similarity/embeddings/: efficientnet.py  pca_reducer.py
logo_similarity/preprocessing/: image_normalizer.py  pipeline.py  text_detector.py  text_masker.py
logo_similarity/reranking/: composite_scorer.py  reranker.py  scoring.py  spatial_matcher.py
logo_similarity/retrieval/: dataset.py  vector_store.py
logo_similarity/text/: phonetic.py  (+1 more)
scripts/: 00_create_toy_dataset.py  01_run_eda.py  01b_eda_and_migrate.py  03_build_index.py  03b_fast_index.py  04_train_model_moco.py  05_export_onnx.py  06_train_semantic_alignment.py  07_vps_optimize.py  app_demo.py  app_prod_test.py  build_rich_metadata.py  convert_id_map.py  debug_model_similarity.py  inspect_checkpoint.py  manage_keys.py  profile_final.py  profile_mem_sqlite.py  run_full_pipeline.sh  run_semantic_training.sh  run_toy_pipeline.sh  setup_remote.sh  sync_minio_to_railway.py  test_full_pipeline.py  test_similarity.py
tests/: test_production_api.py
(+28 files in other folders)
